Describe what you changed here

--- a/gallery.html
+++ b/gallery.html
@@ -50,38 +50,6 @@
 
     <!-- Gallery Hero Section -->
     <section class="page-hero">
-        <div class="background-bubbles">
-            <div class="bubble bubble-1">
-                <i class="fas fa-hammer"></i>
-            </div>
-            <div class="bubble bubble-2">
-                <i class="fas fa-screwdriver"></i>
-            </div>
-            <div class="bubble bubble-3">
-                <i class="fas fa-wrench"></i>
-            </div>
-            <div class="bubble bubble-4">
-                <i class="fas fa-paint-roller"></i>
-            </div>
-            <div class="bubble bubble-5">
-                <i class="fas fa-tools"></i>
-            </div>
-            <div class="bubble bubble-6">
-                <i class="fas fa-hard-hat"></i>
-            </div>
-            <div class="bubble bubble-7">
-                <i class="fas fa-ruler"></i>
-            </div>
-            <div class="bubble bubble-8">
-                <i class="fas fa-tape-measure"></i>
-            </div>
-            <div class="bubble bubble-9">
-                <i class="fas fa-saw"></i>
-            </div>
-            <div class="bubble bubble-10">
-                <i class="fas fa-drill"></i>
-            </div>
-        </div>
         <div class="container">
             <h1>Unsere Galerie</h1>
             <p>Zeigt unsere beste Arbeit</p>
@@ -92,83 +60,108 @@
     <section class="gallery-showcase">
         <div class="container">
             <div class="gallery-grid">
+                <!-- Photos from img/foto folder -->
                 <div class="gallery-item" onclick="openLightbox(0)">
-                    <img src="img/IMG-20250728-WA0003.jpg" alt="Bauprojekt">
+                    <img src="img/foto/IMG-20250829-WA0061.jpg" alt="Bauprojekt">
                 </div>
                 <div class="gallery-item" onclick="openLightbox(1)">
-                    <img src="img/IMG-20250728-WA0004.jpg" alt="Bauprojekt">
+                    <img src="img/foto/IMG-20250829-WA0062.jpg" alt="Bauprojekt">
                 </div>
                 <div class="gallery-item" onclick="openLightbox(2)">
-                    <img src="img/IMG-20250728-WA0005.jpg" alt="Bauprojekt">
+                    <img src="img/foto/IMG-20250829-WA0063.jpg" alt="Bauprojekt">
                 </div>
                 <div class="gallery-item" onclick="openLightbox(3)">
-                    <img src="img/IMG-20250728-WA0006.jpg" alt="Bauprojekt">
+                    <img src="img/foto/IMG-20250829-WA0060.jpg" alt="Bauprojekt">
                 </div>
                 <div class="gallery-item" onclick="openLightbox(4)">
-                    <img src="img/IMG-20250728-WA0007.jpg" alt="Bauprojekt">
+                    <img src="img/foto/IMG-20250829-WA0059.jpg" alt="Bauprojekt">
                 </div>
                 <div class="gallery-item" onclick="openLightbox(5)">
-                    <img src="img/IMG-20250728-WA0008.jpg" alt="Bauprojekt">
+                    <img src="img/foto/IMG-20250829-WA0058.jpg" alt="Bauprojekt">
                 </div>
                 <div class="gallery-item" onclick="openLightbox(6)">
-                    <img src="img/IMG-20250728-WA0009.jpg" alt="Bauprojekt">
+                    <img src="img/foto/IMG-20250829-WA0055.jpg" alt="Bauprojekt">
                 </div>
                 <div class="gallery-item" onclick="openLightbox(7)">
-                    <img src="img/IMG-20250728-WA0010.jpg" alt="Bauprojekt">
+                    <img src="img/foto/WhatsApp Image 2025-08-28 at 23.04.50_1373e86c.jpg" alt="Bauprojekt">
                 </div>
                 <div class="gallery-item" onclick="openLightbox(8)">
-                    <img src="img/IMG-20250728-WA0012.jpg" alt="Bauprojekt">
+                    <img src="img/foto/WhatsApp Image 2025-08-28 at 23.05.30_dc6c4d3b.jpg" alt="Bauprojekt">
                 </div>
                 <div class="gallery-item" onclick="openLightbox(9)">
-                    <img src="img/IMG-20250728-WA0013.jpg" alt="Bauprojekt">
+                    <img src="img/foto/WhatsApp Image 2025-08-28 at 23.04.50_aea61908.jpg" alt="Bauprojekt">
                 </div>
                 <div class="gallery-item" onclick="openLightbox(10)">
-                    <img src="img/IMG-20250728-WA0014.jpg" alt="Bauprojekt">
+                    <img src="img/foto/IMG-20250829-WA0053.jpg" alt="Bauprojekt">
                 </div>
                 <div class="gallery-item" onclick="openLightbox(11)">
-                    <img src="img/IMG-20250728-WA0015.jpg" alt="Bauprojekt">
+                    <img src="img/foto/IMG-20250829-WA0051.jpg" alt="Bauprojekt">
                 </div>
                 <div class="gallery-item" onclick="openLightbox(12)">
-                    <img src="img/IMG-20250728-WA0016.jpg" alt="Bauprojekt">
+                    <img src="img/foto/IMG-20250829-WA0052.jpg" alt="Bauprojekt">
                 </div>
                 <div class="gallery-item" onclick="openLightbox(13)">
-                    <img src="img/IMG-20250728-WA0017.jpg" alt="Bauprojekt">
+                    <img src="img/foto/IMG-20250829-WA0050.jpg" alt="Bauprojekt">
                 </div>
                 <div class="gallery-item" onclick="openLightbox(14)">
-                    <img src="img/IMG-20250728-WA0018.jpg" alt="Bauprojekt">
+                    <img src="img/foto/WhatsApp Image 2025-08-28 at 22.58.37_4e19b755.jpg" alt="Bauprojekt">
                 </div>
                 <div class="gallery-item" onclick="openLightbox(15)">
-                    <img src="img/IMG-20250728-WA0019.jpg" alt="Bauprojekt">
+                    <img src="img/foto/WhatsApp Image 2025-08-28 at 22.56.25_974528ec.jpg" alt="Bauprojekt">
                 </div>
                 <div class="gallery-item" onclick="openLightbox(16)">
-                    <img src="img/IMG-20250728-WA0020.jpg" alt="Bauprojekt">
+                    <img src="img/foto/WhatsApp Image 2025-08-28 at 22.56.53_beec1297.jpg" alt="Bauprojekt">
                 </div>
                 <div class="gallery-item" onclick="openLightbox(17)">
-                    <img src="img/IMG-20250728-WA0019.jpg" alt="Bauprojekt">
+                    <img src="img/foto/WhatsApp Image 2025-08-28 at 22.57.29_f6567a2d.jpg" alt="Bauprojekt">
                 </div>
                 <div class="gallery-item" onclick="openLightbox(18)">
-                    <img src="img/IMG-20250728-WA0022.jpg" alt="Bauprojekt">
+                    <img src="img/foto/IMG-20250829-WA0045.jpg" alt="Bauprojekt">
                 </div>
                 <div class="gallery-item" onclick="openLightbox(19)">
-                    <img src="img/IMG-20250728-WA0023.jpg" alt="Bauprojekt">
+                    <img src="img/foto/IMG-20250829-WA0044.jpg" alt="Bauprojekt">
                 </div>
                 <div class="gallery-item" onclick="openLightbox(20)">
-                    <img src="img/IMG-20250728-WA0024.jpg" alt="Bauprojekt">
+                    <img src="img/foto/IMG-20250829-WA0043.jpg" alt="Bauprojekt">
                 </div>
                 <div class="gallery-item" onclick="openLightbox(21)">
-                    <img src="img/IMG-20250728-WA0025.jpg" alt="Bauprojekt">
+                    <img src="img/foto/IMG-20250829-WA0042.jpg" alt="Bauprojekt">
                 </div>
                 <div class="gallery-item" onclick="openLightbox(22)">
-                    <img src="img/IMG-20250728-WA0026.jpg" alt="Bauprojekt">
+                    <img src="img/foto/IMG-20250829-WA0041.jpg" alt="Bauprojekt">
                 </div>
                 <div class="gallery-item" onclick="openLightbox(23)">
-                    <img src="img/IMG-20250728-WA0027.jpg" alt="Bauprojekt">
+                    <img src="img/foto/IMG-20250829-WA0040.jpg" alt="Bauprojekt">
                 </div>
                 <div class="gallery-item" onclick="openLightbox(24)">
-                    <img src="img/IMG-20250728-WA0028.jpg" alt="Bauprojekt">
+                    <img src="img/foto/IMG-20250829-WA0039.jpg" alt="Bauprojekt">
                 </div>
                 <div class="gallery-item" onclick="openLightbox(25)">
-                    <img src="img/IMG-20250728-WA0029.jpg" alt="Bauprojekt">
+                    <img src="img/foto/IMG-20250829-WA0038.jpg" alt="Bauprojekt">
+                </div>
+                <div class="gallery-item" onclick="openLightbox(26)">
+                    <img src="img/foto/IMG-20250829-WA0037.jpg" alt="Bauprojekt">
+                </div>
+                <div class="gallery-item" onclick="openLightbox(27)">
+                    <img src="img/foto/IMG-20250829-WA0036.jpg" alt="Bauprojekt">
+                </div>
+                <div class="gallery-item" onclick="openLightbox(28)">
+                    <img src="img/foto/IMG-20250829-WA0035.jpg" alt="Bauprojekt">
+                </div>
+                <div class="gallery-item" onclick="openLightbox(29)">
+                    <img src="img/foto/WhatsApp Image 2025-08-28 at 22.29.03_708fa35d.jpg" alt="Bauprojekt">
+                </div>
+                <div class="gallery-item" onclick="openLightbox(30)">
+                    <img src="img/foto/IMG-20250829-WA0033.jpg" alt="Bauprojekt">
+                </div>
+                <div class="gallery-item" onclick="openLightbox(31)">
+                    <img src="img/foto/IMG-20250829-WA0030.jpg" alt="Bauprojekt">
+                </div>
+                <div class="gallery-item" onclick="openLightbox(32)">
+                    <img src="img/foto/WhatsApp Image 2025-08-28 at 22.59.16_9bdf7154.jpg" alt="Bauprojekt">
+                </div>
+                <div class="gallery-item" onclick="openLightbox(33)">
+                    <img src="img/foto/WhatsApp Image 2025-08-28 at 22.59.16_019f9fe5.jpg" alt="Bauprojekt">
                 </div>
             </div>
         </div>
@@ -256,57 +249,42 @@
         // Call the function when page loads
         document.addEventListener('DOMContentLoaded', highlightCurrentPage);
 
-        // Array of all image sources
+        // Array of all image sources - CORRECTED to match actual existing photos
         const images = [
-            'img/IMG-20250728-WA0003.jpg',
-            'img/IMG-20250728-WA0004.jpg',
-            'img/IMG-20250728-WA0005.jpg',
-            'img/IMG-20250728-WA0006.jpg',
-            'img/IMG-20250728-WA0007.jpg',
-            'img/IMG-20250728-WA0008.jpg',
-            'img/IMG-20250728-WA0009.jpg',
-            'img/IMG-20250728-WA0010.jpg',
-            'img/IMG-20250728-WA0012.jpg',
-            'img/IMG-20250728-WA0013.jpg',
-            'img/IMG-20250728-WA0014.jpg',
-            'img/IMG-20250728-WA0015.jpg',
-            'img/IMG-20250728-WA0016.jpg',
-            'img/IMG-20250728-WA0017.jpg',
-            'img/IMG-20250728-WA0018.jpg',
-            'img/IMG-20250728-WA0019.jpg',
-            'img/IMG-20250728-WA0020.jpg',
-            'img/IMG-20250728-WA0021.jpg',
-            'img/IMG-20250728-WA0022.jpg',
-            'img/IMG-20250728-WA0023.jpg',
-            'img/IMG-20250728-WA0024.jpg',
-            'img/IMG-20250728-WA0025.jpg',
-            'img/IMG-20250728-WA0026.jpg',
-            'img/IMG-20250728-WA0027.jpg',
-            'img/IMG-20250728-WA0028.jpg',
-            'img/IMG-20250728-WA0029.jpg',
-            'img/IMG-20250728-WA0030.jpg',
-            'img/IMG-20250728-WA0031.jpg',
-            'img/IMG-20250728-WA0032.jpg',
-            'img/IMG-20250728-WA0033.jpg',
-            'img/IMG-20250728-WA0034.jpg',
-            'img/IMG-20250728-WA0035.jpg',
-            'img/IMG-20250728-WA0036.jpg',
-            'img/IMG-20250728-WA0037.jpg',
-            'img/IMG-20250728-WA0038.jpg',
-            'img/IMG-20250802-WA0003.jpg',
-            'img/IMG-20250728-WA0005.jpg',
-            'img/IMG-20250802-WA0006.jpg',
-            'img/IMG-20250802-WA0007.jpg',
-            'img/IMG-20250802-WA0008.jpg',
-            'img/IMG-20250802-WA0009.jpg',
-            'img/IMG-20250802-WA0010.jpg',
-            'img/IMG-20250802-WA0011.jpg',
-            'img/IMG-20250802-WA0012.jpg',
-            'img/IMG-20250802-WA0013.jpg',
-            'img/IMG-20250802-WA0014.jpg',
-            'img/IMG-20250802-WA0015.jpg',
-            'img/WhatsApp Image 2025-07-24 at 21.30.47_1a6879b1.jpg',
-            'img/WhatsApp Image 2025-07-28 at 18.09.07_258a2f8a.jpg'
+            'img/foto/IMG-20250829-WA0061.jpg',
+            'img/foto/IMG-20250829-WA0062.jpg',
+            'img/foto/IMG-20250829-WA0063.jpg',
+            'img/foto/IMG-20250829-WA0060.jpg',
+            'img/foto/IMG-20250829-WA0059.jpg',
+            'img/foto/IMG-20250829-WA0058.jpg',
+            'img/foto/IMG-20250829-WA0055.jpg',
+            'img/foto/WhatsApp Image 2025-08-28 at 23.04.50_1373e86c.jpg',
+            'img/foto/WhatsApp Image 2025-08-28 at 23.05.30_dc6c4d3b.jpg',
+            'img/foto/WhatsApp Image 2025-08-28 at 23.04.50_aea61908.jpg',
+            'img/foto/IMG-20250829-WA0053.jpg',
+            'img/foto/IMG-20250829-WA0051.jpg',
+            'img/foto/IMG-20250829-WA0052.jpg',
+            'img/foto/IMG-20250829-WA0050.jpg',
+            'img/foto/WhatsApp Image 2025-08-28 at 22.58.37_4e19b755.jpg',
+            'img/foto/WhatsApp Image 2025-08-28 at 22.56.25_974528ec.jpg',
+            'img/foto/WhatsApp Image 2025-08-28 at 22.56.53_beec1297.jpg',
+            'img/foto/WhatsApp Image 2025-08-28 at 22.57.29_f6567a2d.jpg',
+            'img/foto/IMG-20250829-WA0045.jpg',
+            'img/foto/IMG-20250829-WA0044.jpg',
+            'img/foto/IMG-20250829-WA0043.jpg',
+            'img/foto/IMG-20250829-WA0042.jpg',
+            'img/foto/IMG-20250829-WA0041.jpg',
+            'img/foto/IMG-20250829-WA0040.jpg',
+            'img/foto/IMG-20250829-WA0039.jpg',
+            'img/foto/IMG-20250829-WA0038.jpg',
+            'img/foto/IMG-20250829-WA0037.jpg',
+            'img/foto/IMG-20250829-WA0036.jpg',
+            'img/foto/IMG-20250829-WA0035.jpg',
+            'img/foto/WhatsApp Image 2025-08-28 at 22.29.03_708fa35d.jpg',
+            'img/foto/IMG-20250829-WA0033.jpg',
+            'img/foto/IMG-20250829-WA0030.jpg',
+            'img/foto/WhatsApp Image 2025-08-28 at 22.59.16_9bdf7154.jpg',
+            'img/foto/WhatsApp Image 2025-08-28 at 22.59.16_019f9fe5.jpg'
         ];
 
         let currentImageIndex = 0;
