--- a/index.html
+++ b/index.html
@@ -192,13 +192,13 @@
             <h2>Unsere Galerie</h2>
             <div class="gallery-grid">
                 <div class="gallery-item">
-                    <img src="img/IMG-20250728-WA0003.jpg" alt="Bauprojekt 1">
+                    <img src="img/foto/IMG-20250829-WA0061.jpg" alt="Bauprojekt 1">
                 </div>
                 <div class="gallery-item">
-                    <img src="img/IMG-20250728-WA0004.jpg" alt="Bauprojekt 2">
+                    <img src="img/foto/IMG-20250829-WA0062.jpg" alt="Bauprojekt 2">
                 </div>
                 <div class="gallery-item">
-                    <img src="img/IMG-20250728-WA0005.jpg" alt="Bauprojekt 3">
+                    <img src="img/foto/IMG-20250829-WA0063.jpg" alt="Bauprojekt 3">
                 </div>
             </div>
             <div class="gallery-cta">
