--- a/services.html
+++ b/services.html
@@ -50,38 +50,6 @@
 
     <!-- Services Hero Section -->
     <section class="page-hero">
-        <div class="background-bubbles">
-            <div class="bubble bubble-1">
-                <i class="fas fa-hammer"></i>
-            </div>
-            <div class="bubble bubble-2">
-                <i class="fas fa-screwdriver"></i>
-            </div>
-            <div class="bubble bubble-3">
-                <i class="fas fa-wrench"></i>
-            </div>
-            <div class="bubble bubble-4">
-                <i class="fas fa-paint-roller"></i>
-            </div>
-            <div class="bubble bubble-5">
-                <i class="fas fa-tools"></i>
-            </div>
-            <div class="bubble bubble-6">
-                <i class="fas fa-hard-hat"></i>
-            </div>
-            <div class="bubble bubble-7">
-                <i class="fas fa-ruler"></i>
-            </div>
-            <div class="bubble bubble-8">
-                <i class="fas fa-tape-measure"></i>
-            </div>
-            <div class="bubble bubble-9">
-                <i class="fas fa-saw"></i>
-            </div>
-            <div class="bubble bubble-10">
-                <i class="fas fa-drill"></i>
-            </div>
-        </div>
         <div class="container">
             <h1>Unsere Leistungen</h1>
             <p>Umfassende Baulösungen</p>
@@ -101,7 +69,7 @@
             <div class="services-grid">
                 <div class="service-card">
                     <div class="service-card-image">
-                        <img src="img/IMG-20250728-WA0006.jpg" alt="Trockenbau-Leistungen">
+                        <img src="img/services/Trockenbau.jpg" alt="Trockenbau-Leistungen">
                     </div>
                     <div class="service-card-content">
                         <div class="service-card-icon">
@@ -121,7 +89,7 @@
 
                 <div class="service-card">
                     <div class="service-card-image">
-                        <img src="img/IMG-20250728-WA0007.jpg" alt="Bodenbelag-Leistungen">
+                        <img src="img/services/Bodenbeläge.jpg" alt="Bodenbelag-Leistungen">
                     </div>
                     <div class="service-card-content">
                         <div class="service-card-icon">
@@ -141,7 +109,7 @@
 
                 <div class="service-card">
                     <div class="service-card-image">
-                        <img src="img/IMG-20250728-WA0008.jpg" alt="Renovierungsleistungen">
+                        <img src="img/services/Renovierung.jpg" alt="Renovierungsleistungen">
                     </div>
                     <div class="service-card-content">
                         <div class="service-card-icon">
@@ -161,7 +129,7 @@
 
                 <div class="service-card">
                     <div class="service-card-image">
-                        <img src="img/IMG-20250728-WA0009.jpg" alt="Gebäudereinigung">
+                        <img src="img/services/Gebäudereinigung.jpg" alt="Gebäudereinigung">
                     </div>
                     <div class="service-card-content">
                         <div class="service-card-icon">
@@ -181,7 +149,7 @@
 
                 <div class="service-card">
                     <div class="service-card-image">
-                        <img src="img/IMG-20250728-WA0010.jpg" alt="Projektmanagement">
+                        <img src="img/services/Projektmanagement.jpg" alt="Projektmanagement">
                     </div>
                     <div class="service-card-content">
                         <div class="service-card-icon">
@@ -201,7 +169,7 @@
 
                 <div class="service-card">
                     <div class="service-card-image">
-                        <img src="img/IMG-20250802-WA0015.jpg" alt="Innenausbau">
+                        <img src="img/services/innenausbau.jpg" alt="Innenausbau">
                     </div>
                     <div class="service-card-content">
                         <div class="service-card-icon">
